--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,9 @@ jobs:
       with:
         node-version: lts/*
     - name: Install dependencies
-      run: npm ci
+      run: |
+        cd tests
+        npm ci
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
     - name : Start Medibook Docker Services
