--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,14 +16,18 @@ jobs:
         cd tests
         npm ci
     - name: Install Playwright Browsers
-      run: npx playwright install --with-deps
+      run: |
+        cd tests
+        npx playwright install --with-deps
     - name : Start Medibook Docker Services
       run: docker compose -f medibook/docker-compose.yml up -d --build
     - name: Run Playwright tests
-      run: npx playwright test
+      run: |
+        cd tests
+        npx playwright test
     - uses: actions/upload-artifact@v4
       if: ${{ !cancelled() }}
       with:
         name: playwright-report
-        path: playwright-report/
+        path: tests/playwright-report/
         retention-days: 30
